--- a/UserDash.html
+++ b/UserDash.html
@@ -7,6 +7,36 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
   <title>LOLLIPOP CLUB</title>
   <style>
+    /* Modal styles */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+    }
+    .modal-content {
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+    }
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
     /* Your existing styles here */
   </style>
 </head>
@@ -61,6 +91,17 @@
       <button type="submit">Add Product</button>
     </form>
     <button onclick="closeAddProductForm()">Cancel</button>
+  </div>
+
+  <!-- Modal -->
+  <div id="product-modal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <h2>Product Information</h2>
+      <div id="modal-content-body">
+        <!-- Content will be loaded dynamically here -->
+      </div>
+    </div>
   </div>
 
   <!-- Cart and Checkout -->
@@ -159,6 +200,7 @@
           <p>In stock: ${product.quantity}</p>
           <button onclick="editProduct(${index})">Edit</button>
           <button onclick="deleteProduct(${index})">Delete</button>
+          <button onclick="openModal(${index})">View Details</button>
         `;
         userProductsContainer.appendChild(productDiv);
       });
@@ -205,14 +247,32 @@
       closeAddProductForm();
     });
 
-    // Show add product form
+    // Open Add Product Form
     function openAddProductForm() {
       document.getElementById('add-product-form').style.display = 'block';
     }
 
-    // Close add product form
+    // Close Add Product Form
     function closeAddProductForm() {
       document.getElementById('add-product-form').style.display = 'none';
+    }
+
+    // Open modal
+    function openModal(index) {
+      const product = currentUser.products[index];
+      const modalContent = document.getElementById('modal-content-body');
+      modalContent.innerHTML = `
+        <h3>${product.name}</h3>
+        <img src="${product.image}" alt="${product.name}" style="width: 100%; max-width: 200px;">
+        <p><strong>Price:</strong> $${product.price}</p>
+        <p><strong>In Stock:</strong> ${product.quantity}</p>
+      `;
+      document.getElementById('product-modal').style.display = 'block';
+    }
+
+    // Close modal
+    function closeModal() {
+      document.getElementById('product-modal').style.display = 'none';
     }
 
     // Redirect to product list (main page)
