--- a/Shoppin222.html
+++ b/Shoppin222.html
@@ -34,6 +34,15 @@
       display: block;
       margin: 0 auto;
       border-radius: 10px;
+      padding: 2px;
+      border: 2px solid lightskyblue;
+      border-radius: 8px;
+      box-shadow: 0px 2px 10px white;
+    }
+    body.lightStore .modal-content img {
+      border: 2px solid gold;
+      border-radius: 8px;
+      box-shadow: 0px 2px 10px yellowgreen;
     }
 
     /* Next and Previous buttons */
