--- a/Laccesories.html
+++ b/Laccesories.html
@@ -71,7 +71,17 @@
     .prev:hover, .next:hover {
       background-color: rgba(0, 0, 0, 0.8);
     }
-
+    h1{
+      background-image: none;
+    }
+    h4{
+      color: wheat;
+      text-shadow: 2px 2px 4px darkblue;
+      margin-bottom: 10px;
+      background-image: url(AstronautHeadLogoGif.gif);
+      background-position: center;
+      background-size: 65%;
+    }
   </style>
 </head>
 <body>
