--- a/Shopping.html
+++ b/Shopping.html
@@ -125,74 +125,35 @@
   </div>
 
   <div class="product">
-    <img src="Vara pump - Women.webp" onclick="openModal(1)">
-    <h3>Vara pump - Ferragamo Women's shoes</h3>
-    <p id="Price-tag">$15</p>
-    <label for="quantity2">Qty:</label>
-    <input type="number" id="quantity2" name="quantity" min="1" value="1" max="5">
-    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
-    <button class="add-to-cart" data-product="Vara pump - Ferragamo Women's shoes" data-price="15" data-image="Vara pump - Women.webp">Add to Cart</button>
-  </div>
-
-  <div class="product">
-    <img src="Shirt1pic.webp" onclick="openModal(0)">
-    <h3>Young & Rich - Men's T-shirt</h3>
+    <img src="Bulova-Futuro-Men's-Gold-Diamond-BlackPic5.jpg" onclick="openModal(1)">
+    <h3>Bulova-Futuro-Men's-Gold-Diamond-Black</h3>
     <p id="Price-tag">$14.50</p>
     <label for="quantity1">Qty:</label>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
-    <p id="in-Stock">In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
-    <button class="add-to-cart" data-product="Young & Rich - Men's T-shirt" data-price="14.50" data-image="Shirt1pic.webp">Add to Cart</button>
+    <p id="in-Stock">In Stock: <span id="stock1">5</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="Bulova Futuro Men's Gold Diamond-Black" data-price="14.50" data-image="Bulova-Futuro-Men's-Gold-Diamond-BlackPic5.jpg">Add to Cart</button>
   </div>
 
   <div class="product">
-    <img src="Vara pump - Women.webp" onclick="openModal(1)">
+    <img src="Vara pump - Women.webp" onclick="openModal(2)">
     <h3>Vara pump - Ferragamo Women's shoes</h3>
     <p id="Price-tag">$15</p>
     <label for="quantity2">Qty:</label>
-    <input type="number" id="quantity2" name="quantity" min="1" value="1" max="5">
+    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="Vara pump - Ferragamo Women's shoes" data-price="15" data-image="Vara pump - Women.webp">Add to Cart</button>
   </div>
 
   <div class="product">
-    <img src="Shirt1pic.webp" onclick="openModal(0)">
-    <h3>Young & Rich - Men's T-shirt</h3>
-    <p id="Price-tag">$14.50</p>
-    <label for="quantity1">Qty:</label>
-    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
-    <p id="in-Stock">In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
-    <button class="add-to-cart" data-product="Young & Rich - Men's T-shirt" data-price="14.50" data-image="Shirt1pic.webp">Add to Cart</button>
-  </div>
-
-  <div class="product">
-    <img src="Vara pump - Women.webp" onclick="openModal(1)">
-    <h3>Vara pump - Ferragamo Women's shoes</h3>
+    <img src="G-Shock-Digital-Black-Red-Shock--Watch-Pic7.avif" onclick="openModal(3)">
+    <h3>G-Shock Digital Black & Red - Watch</h3>
     <p id="Price-tag">$15</p>
     <label for="quantity2">Qty:</label>
-    <input type="number" id="quantity2" name="quantity" min="1" value="1" max="5">
+    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
-    <button class="add-to-cart" data-product="Vara pump - Ferragamo Women's shoes" data-price="15" data-image="Vara pump - Women.webp">Add to Cart</button>
+    <button class="add-to-cart" data-product="G-Shock Digital Black & Red Shock" data-price="15" data-image="G-Shock-Digital-Black-Red-Shock--Watch-Pic7.avif">Add to Cart</button>
   </div>
 
-  <div class="product">
-    <img src="Shirt1pic.webp" onclick="openModal(0)">
-    <h3>Young & Rich - Men's T-shirt</h3>
-    <p id="Price-tag">$14.50</p>
-    <label for="quantity1">Qty:</label>
-    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
-    <p id="in-Stock">In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
-    <button class="add-to-cart" data-product="Young & Rich - Men's T-shirt" data-price="14.50" data-image="Shirt1pic.webp">Add to Cart</button>
-  </div>
-
-  <div class="product">
-    <img src="Vara pump - Women.webp" onclick="openModal(1)">
-    <h3>Vara pump - Ferragamo Women's shoes</h3>
-    <p id="Price-tag">$15</p>
-    <label for="quantity2">Qty:</label>
-    <input type="number" id="quantity2" name="quantity" min="1" value="1" max="5">
-    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
-    <button class="add-to-cart" data-product="Vara pump - Ferragamo Women's shoes" data-price="15" data-image="Vara pump - Women.webp">Add to Cart</button>
-  </div>
 
   <!-- Add other products here similarly -->
 </ul>
