--- a/Shopping.html
+++ b/Shopping.html
@@ -145,13 +145,53 @@
   </div>
 
   <div class="product">
-    <img src="G-Shock-Digital-Black-Red-Shock--Watch-Pic7.avif" onclick="openModal(3)">
+    <img src="The-Watch-Snob-pic3.jpg" onclick="openModal(3)">
+    <h3>The Watch Snob</h3>
+    <p id="Price-tag">$15</p>
+    <label for="quantity2">Qty:</label>
+    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="The Watch Snob" data-price="15" data-image="The-Watch-Snob-pic3.jpg">Add to Cart</button>
+  </div>
+
+  <div class="product">
+    <img src="Bulova-Oceanographer-Men's-Automatic-Watch-pic6.avif" onclick="openModal(4)">
+    <h3>Bulova Oceanographer Men's Automatic Watch</h3>
+    <p id="Price-tag">$15</p>
+    <label for="quantity2">Qty:</label>
+    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="Bulova Oceanographer Men's Automatic Watch" data-price="15" data-image="Bulova-Oceanographer-Men's-Automatic-Watch-pic6.avif">Add to Cart</button>
+  </div>
+
+  <div class="product">
+    <img src="G-Shock-Digital-Black-Red-Shock--Watch-Pic7.avif" onclick="openModal(5)">
     <h3>G-Shock Digital Black & Red - Watch</h3>
     <p id="Price-tag">$15</p>
     <label for="quantity2">Qty:</label>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="G-Shock Digital Black & Red Shock" data-price="15" data-image="G-Shock-Digital-Black-Red-Shock--Watch-Pic7.avif">Add to Cart</button>
+  </div>
+
+  <div class="product">
+    <img src="Nike Air Max 97 By You Custom Men's Shoes 1.png" onclick="openModal(6)">
+    <h3>G-Shock Digital Black & Red - Watch</h3>
+    <p id="Price-tag">$15</p>
+    <label for="quantity2">Qty:</label>
+    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="Nike Air Max 97 By You Custom Men's Shoes" data-price="15" data-image="Nike Air Max 97 By You Custom Men's Shoes 1.png">Add to Cart</button>
+  </div>
+
+  <div class="product">
+    <img src="2 Chainz x Versace Chain Reaction Shoes.webp" onclick="openModal(7)">
+    <h3>2 Chainz x Versace Chain Reaction Shoes</h3>
+    <p id="Price-tag">$15</p>
+    <label for="quantity2">Qty:</label>
+    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="2 Chainz x Versace Chain Reaction Shoes" data-price="15" data-image="2 Chainz x Versace Chain Reaction Shoes.webp">Add to Cart</button>
   </div>
 
 
