--- a/Shopping.html
+++ b/Shopping.html
@@ -342,7 +342,7 @@ document.querySelectorAll('.product').forEach(function(product, index) {
 
 
   </script>
-  <script src="Shopping.js"></script>
+  <script src="Shopping222.js"></script>
   <script src="node.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
