--- a/Shopping1.html
+++ b/Shopping1.html
@@ -117,36 +117,40 @@
           <div class="img">
 
               <div class="imgBox" style="--i:1;">
-                  <a href="https://www.youtube.com/watch?v=BnOIlMTZY9U"><img src="img1.jpg"></a>
+                  <a href="https://www.youtube.com/watch?v=BnOIlMTZY9U"><img src="AccesoriesPic.png"></a>
               </div>
 
               <div class="imgBox" style="--i:2;">
-                  <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="img2.jpg"></a>
+                  <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="2 Chainz x Versace Chain Reaction Shoes.webp"></a>
               </div>
 
               <div class="imgBox" style="--i:3;">
-                  <a href="https://www.youtube.com/watch?v=wctnQQ-RLek"><img src="img3.jpg"></a>
+                  <a href="https://www.youtube.com/watch?v=wctnQQ-RLek"><img src="AstronautHeadLogoGif.gif"></a>
               </div>
 
               <div class="imgBox" style="--i:4;">
-                  <img src="img4.jpg">
-              </div>
+                <a href="https://www.youtube.com/watch?v=BnOIlMTZY9U"><img src="Bulova-Futuro-Men's-Gold-Diamond-BlackPic5.jpg"></a>
+            </div>
 
-              <div class="imgBox" style="--i:5;">
-                  <img src="img5.jpg">
-              </div>
+            <div class="imgBox" style="--i:5;">
+                <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="GlassesPic.avif"></a>
+            </div>
 
-              <div class="imgBox" style="--i:6;">
-                  <img src="img6.jpg">
-              </div>
+            
+            <div class="imgBox" style="--i:6;">
+              <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="The-Watch-Snob-pic3.jpg"></a>
+           </div>            
 
-              <div class="imgBox" style="--i:7;">
-                  <img src="img7.jpg">
-              </div>
+            <div class="imgBox" style="--i:7;">
+              <a href="https://www.youtube.com/watch?v=BnOIlMTZY9U"><img src="MonkeyDesignGif.gif"></a>
+           </div>
 
-              <div class="imgBox" style="--i:8;">
-                  <img src="img8.jpg">
-              </div>
+          <div class="imgBox" style="--i:8;">
+              <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="MensFashionLogoPic.png"></a>
+          </div>
+
+
+             
 
           </div>
       </div>
