--- a/Shopping1.html
+++ b/Shopping1.html
@@ -161,7 +161,7 @@
 
   <div class="product">
     <img src="Shirt1pic.webp" onclick="openModal(0)">
-    <h3>Young & Rich - Men's T-shirt</h3>
+    <h3>Young & Rich - Men's T-shirt - Men's T-shirt</h3>
     <p id="Price-tag">$14.50</p>
     <label for="quantity1">Qty:</label>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
@@ -191,7 +191,7 @@
 
   <div class="product">
     <img src="The-Watch-Snob-pic3.jpg" onclick="openModal(3)">
-    <h3>The Watch Snob</h3>
+    <h3>The Watch Snob - (Man) watches - Men's Watch</h3>
     <p id="Price-tag">$15</p>
     <label for="quantity2">Qty:</label>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
