--- a/Shopping.html
+++ b/Shopping.html
@@ -100,7 +100,7 @@
     <div class="L-Accesories-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Sneakers-Nav"><a href="Lsneakers.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Watches-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div> 
-    <div class="nba"><a href="Ls2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+    <div class="nba"><a href="Shopping1.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-RealState-Nav"><a href="LRealState.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Men-Fashion-Nav"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Glasses-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div>
