--- a/Shopping.html
+++ b/Shopping.html
@@ -102,7 +102,7 @@
     <div class="L-Watches-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div> 
     <div class="nba"><a href="Shopping1.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-RealState-Nav"><a href="LRealState.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="L-Men-Fashion-Nav"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+    <div class="L-Men-Fashion-Nav"><a href="Shopping1.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Glasses-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Shoes-Nav"><a href="Lshoes.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Kitchen-Nav"><a href="Lkitchen.html"><ion-icon name="finger-print"></ion-icon></a></div>
@@ -111,12 +111,57 @@
 
     </div>
 
+    <div class="container">
+      <h5>LOLLIP<ion-icon name="headset-sharp"></ion-icon>P</h5> 
+      <div class="Box">
+          <div class="img">
+
+              <div class="imgBox" style="--i:1;">
+                  <a href="https://www.youtube.com/watch?v=BnOIlMTZY9U"><img src="AccesoriesPic.png"></a>
+              </div>
+
+              <div class="imgBox" style="--i:2;">
+                  <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="2 Chainz x Versace Chain Reaction Shoes.webp"></a>
+              </div>
+
+              <div class="imgBox" style="--i:3;">
+                  <a href="https://www.youtube.com/watch?v=wctnQQ-RLek"><img src="AstronautHeadLogoGif.gif"></a>
+              </div>
+
+              <div class="imgBox" style="--i:4;">
+                <a href="https://www.youtube.com/watch?v=BnOIlMTZY9U"><img src="Bulova-Futuro-Men's-Gold-Diamond-BlackPic5.jpg"></a>
+            </div>
+
+            <div class="imgBox" style="--i:5;">
+                <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="GlassesPic.avif"></a>
+            </div>
+
+            
+            <div class="imgBox" style="--i:6;">
+              <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="The-Watch-Snob-pic3.jpg"></a>
+           </div>            
+
+            <div class="imgBox" style="--i:7;">
+              <a href="https://www.youtube.com/watch?v=BnOIlMTZY9U"><img src="MonkeyDesignGif.gif"></a>
+           </div>
+
+          <div class="imgBox" style="--i:8;">
+              <a href="https://www.youtube.com/watch?v=rQGocYoUsY0"><img src="MensFashionLogoPic.png"></a>
+          </div>
+
+
+             
+
+          </div>
+      </div>
+  </div>
+
  <!-- Product List -->
 <ul class="product-List">
 
   <div class="product">
     <img src="Shirt1pic.webp" onclick="openModal(0)">
-    <h3>Young & Rich - Men's T-shirt</h3>
+    <h3>Young & Rich - Men's T-shirt - Men's T-shirt</h3>
     <p id="Price-tag">$14.50</p>
     <label for="quantity1">Qty:</label>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
@@ -146,7 +191,7 @@
 
   <div class="product">
     <img src="The-Watch-Snob-pic3.jpg" onclick="openModal(3)">
-    <h3>The Watch Snob</h3>
+    <h3>The Watch Snob - (Man) watches - Men's Watch</h3>
     <p id="Price-tag">$15</p>
     <label for="quantity2">Qty:</label>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="5">
