--- a/Shopping1.html
+++ b/Shopping1.html
@@ -83,7 +83,8 @@
        
       <!-- Navigation Info -->
       <div class="nav-info">
-        <a href="#about">About</a>
+        <a href="https://jjservice.github.io/L2/1.html"><ion-icon name="home"></ion-icon></a>
+        <a href="https://jjservice.github.io/L2/1.html">About</a>
         <a href="#contact">Contact</a>
         <a href="#faq">FAQ</a>
       </div>
