--- a/Shopping1.html
+++ b/Shopping1.html
@@ -502,6 +502,7 @@ document.querySelectorAll('.product').forEach(function(product, index) {
 
 
   </script>
+  <script src="https://js.stripe.com/v3/"></script>
   <script src="Shopping222.js"></script>
   <script src="node.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
