--- a/Shopping.html
+++ b/Shopping.html
@@ -171,8 +171,9 @@
   <div class="product">
     <img src="Shirt1pic.webp" onclick="openModal(0)">
     <h3>Young & Rich - Men's T-shirt - Men's T-shirt</h3>
-    <p id="Price-tag">$14.50</p>
+    <p id="Price-tag">$1.00</p>
     <label for="quantity1">Qty:</label>
+    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144">BUY NOW!</a>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
     <p id="in-Stock">In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="Young & Rich - Men's T-shirt" data-price="14.50" data-image="Shirt1pic.webp">Add to Cart</button>
@@ -279,6 +280,7 @@
     <h3>Young & Rich - Men's T-shirt - Men's T-shirt</h3>
     <p id="Price-tag">$14.50</p>
     <label for="quantity1">Qty:</label>
+    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144">BUY NOW!</a>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
     <p id="in-Stock">In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="Young & Rich - Men's T-shirt" data-price="14.50" data-image="Shirt1pic.webp">Add to Cart</button>
