--- a/Shopping.html
+++ b/Shopping.html
@@ -153,7 +153,7 @@
       </div>
   </div>
 
- <!-- Product List -->
+ <!---------- Product List Samplesssss-------------->
 <ul class="product-List">
 
   <div class="product">
@@ -240,12 +240,42 @@
   <!-- Add other products here similarly -->
 </ul>
 
+
+<!-------Product List Payable Optionsss ------>
+
 <ul class="product-List2">
 
   <div class="product">
     <img src="2 Chainz x Versace Chain Reaction Shoes.webp" onclick="openModal(7)">
     <h3>2 Chainz x Versace Chain Reaction Shoes</h3>
-    <p id="Price-tag">$15</p>
+    <p id="Price-tag">$1.00</p>
+    <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
+  </div>
+
+  <div class="product">
+    <img src="Bulova-Futuro-Men's-Gold-Diamond-BlackPic5.jpg" onclick="openModal(7)">
+    <h3>Bulova Futuro Men's Gold & Black Diamond</h3>
+    <p id="Price-tag">$1.00</p>
+    <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
+  </div>
+
+  <div class="product">
+    <img src="Prada Men's America's Cup Patent Leather Patchwork Sneakers, Mandarin Orange Silver, Men's, 14D,.webp" onclick="openModal(7)">
+    <h3>Prada Men's Sneakers, Mandarin Orange Silver</h3>
+    <p id="Price-tag">$1.00</p>
+    <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
+  </div>
+   
+  <div class="product">
+    <img src="Nike Air Max 97 By You Custom Men's Shoes 1.png" onclick="openModal(7)">
+    <h3>Nike Air Max 97 By You Custom Men's Shoes</h3>
+    <p id="Price-tag">$1.00</p>
     <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
     <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
