--- a/Shopping.html
+++ b/Shopping.html
@@ -251,7 +251,7 @@
     <p id="Price-tag">$1.00</p>
     <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
-    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
+    <a href="https://buy.stripe.com/aEU7vh81v1e1c00146" class="Buy-Now-Tag">BUY NOW!</a>
   </div>
 
   <div class="product">
@@ -260,7 +260,7 @@
     <p id="Price-tag">$1.00</p>
     <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
-    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
+    <a href="https://buy.stripe.com/3cseXJgy15uhe88eUX" class="Buy-Now-Tag">BUY NOW!</a>
   </div>
 
   <div class="product">
@@ -269,7 +269,7 @@
     <p id="Price-tag">$1.00</p>
     <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
-    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
+    <a href="https://buy.stripe.com/dR65n95TnaOB6FG3cg" class="Buy-Now-Tag">BUY NOW!</a>
   </div>
    
   <div class="product">
@@ -278,10 +278,44 @@
     <p id="Price-tag">$1.00</p>
     <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
     <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
-    <a href="https://buy.stripe.com/eVa3f1gy18Gt4xy144" class="Buy-Now-Tag">BUY NOW!</a>
+    <a href="https://buy.stripe.com/dR63f1chL6yld4428d" class="Buy-Now-Tag">BUY NOW!</a>
   </div>
 
+  <div class="product">
+    <img src="2 Chainz x Versace Chain Reaction Shoes.webp" onclick="openModal(7)">
+    <h3>2 Chainz x Versace Chain Reaction Shoes</h3>
+    <p id="Price-tag">$1.00</p>
+    <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <a href="https://buy.stripe.com/aEU7vh81v1e1c00146" class="Buy-Now-Tag">BUY NOW!</a>
+  </div>
 
+  <div class="product">
+    <img src="Bulova-Futuro-Men's-Gold-Diamond-BlackPic5.jpg" onclick="openModal(7)">
+    <h3>Bulova Futuro Men's Gold & Black Diamond</h3>
+    <p id="Price-tag">$1.00</p>
+    <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <a href="https://buy.stripe.com/3cseXJgy15uhe88eUX" class="Buy-Now-Tag">BUY NOW!</a>
+  </div>
+
+  <div class="product">
+    <img src="Prada Men's America's Cup Patent Leather Patchwork Sneakers, Mandarin Orange Silver, Men's, 14D,.webp" onclick="openModal(7)">
+    <h3>Prada Men's Sneakers, Mandarin Orange Silver</h3>
+    <p id="Price-tag">$1.00</p>
+    <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <a href="https://buy.stripe.com/dR65n95TnaOB6FG3cg" class="Buy-Now-Tag">BUY NOW!</a>
+  </div>
+   
+  <div class="product">
+    <img src="Nike Air Max 97 By You Custom Men's Shoes 1.png" onclick="openModal(7)">
+    <h3>Nike Air Max 97 By You Custom Men's Shoes</h3>
+    <p id="Price-tag">$1.00</p>
+    <input type="number" id="quantity1" name="quantity" min="1"  max="5" placeholder="Qty">
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <a href="https://buy.stripe.com/dR63f1chL6yld4428d" class="Buy-Now-Tag">BUY NOW!</a>
+  </div>
   <!-- Add other products here similarly -->
 </ul>
 
